--- a/client-connect/src/main/resources/application.properties
+++ b/client-connect/src/main/resources/application.properties
@@ -1,10 +1,25 @@
+#spring.application.name=client-connect
+#spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
+#spring.datasource.username=root
+#spring.datasource.password=Rev@thi123
+#spring.jpa.show-sql=true
+#spring.sql.init.mode=always
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.defer-datasource-initialization=true
+#
+#spring.security.user.name=user
+#spring.security.user.password=dummy
+
 spring.application.name=client-connect
 spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
 spring.datasource.username=root
 spring.datasource.password=Rev@thi123
 spring.jpa.show-sql=true
-#spring.sql.init.mode=always
-spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.security.user.name=user
+spring.security.user.password=dummy
