--- a/client-connect/src/main/resources/application.properties
+++ b/client-connect/src/main/resources/application.properties
@@ -18,8 +18,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
 spring.datasource.username=root
 spring.datasource.password=Rev@thi123
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.security.user.name=user
-spring.security.user.password=dummy
