--- a/client-connect/src/main/resources/application.properties
+++ b/client-connect/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=client-connect
-spring.datasource.url=jdbc:mysql://localhost:3306/clientConnectDB
+spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
 spring.datasource.username=root
-spring.datasource.password=Aridni
+spring.datasource.password=Saiprajith2@
 spring.jpa.show-sql=true
 #spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.defer-datasource-initialization=true
-spring.security.user.name=indu
-spring.security.user.password=indu
