added security and user ,roles

--- a/client-connect/src/main/resources/application.properties
+++ b/client-connect/src/main/resources/application.properties
@@ -1,10 +1,37 @@
+#spring.application.name=client-connect
+#spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
+#spring.datasource.username=root
+#spring.datasource.password=Rev@thi123
+#spring.jpa.show-sql=true
+#spring.sql.init.mode=always
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.defer-datasource-initialization=true
+#
+#spring.security.user.name=user
+#spring.security.user.password=dummy
+
 spring.application.name=client-connect
 spring.datasource.url=jdbc:mysql://localhost:3306/client_connect_db
 spring.datasource.username=root
-spring.datasource.password=Saiprajith2@
+spring.datasource.password=vinay91413
 spring.jpa.show-sql=true
-#spring.sql.init.mode=always
-spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.security.user.name=user
+spring.security.user.password=dummy
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=indira.ramayanam20@gmail.com
+spring.mail.password=jvzehypadrhzawyo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
